package TodoListWithAccountSystem.Utils;

public class ConsoleTool {
    public void clear() {
        for (int i = 0; i <= 100; i++) {
            System.out.println();
        }
    }
}
